# python-excercises

./: .gitignore  README.md  augusto_tests.ipynb  basics.py
basics/: basics.py  classes.py  conditions.py  dictionary.py  excercises.py  functions.py  iterators.py  list-compreensions.py  lists.py  strings.py  tuple.py
eval-api/: .coverage  Makefile  README.md  pyproject.toml
eval-api/src/api/: main.py
eval-api/tests/: test_init.py
hacking/: count-occurrences.py  nested-list.py  permutation.py  picking-numbers.py  remove-dups-from-list.py  repeated-str.py
numpy/: array-operacoes.py  indexing.py  methods.py  np-excercises.py  test.py
pandas/: dados_ausentes.py  dataframe.py  dataframe_conditional_selection.py  dataframe_join_concat_merge.py  dataframe_multilevel_index.py  group_by.py  series.py
python-api/: README.md  pyproject.toml
python-api/tests/: __init__.py  test_init.py
