[tool.poetry]
name = "eval-api"
version = "0.1.0"
description = ""
authors = ["Augusto <augustoscher@gmail.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
httpx = "^0.24.1"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"
isort = "^5.12.0"

[tool.ruff]
target-version = "py311"
select = ["E", "F", "I001"]

[tool.coverage.run]
source = ["api"]
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
fail_under = 95

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
