[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["Augusto <augustoscher@gmail.com>"]
readme = "README.md"
packages = [{include = "python_api"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
