[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["Augusto <augustoscher@gmail.com>"]
readme = "README.md"
packages = [{include = "python_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
